--- a/health/sass/components/card/_cards-colours.scss
+++ b/health/sass/components/card/_cards-colours.scss
@@ -3,7 +3,7 @@
 @mixin AU-card-colours {
   li, article {
     .au-cta-link {
-      border-top-width: 3px;
+      border-top-width: 6px;
       border-top-style: solid;
       transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out;
     }
