--- a/health/sass/components/forms/control-input/_extends.scss
+++ b/health/sass/components/forms/control-input/_extends.scss
@@ -19,4 +19,8 @@
   }
 }
 
-
+// AU override
+.au-control-input.au-control-input--block {
+  margin-top: 0;
+  @include AU-space(margin-bottom, .5unit);
+}
