--- a/health/sass/themes/health/_colors.scss
+++ b/health/sass/themes/health/_colors.scss
@@ -41,6 +41,7 @@
 $colour-Shadow: rgba(0,0,0,0.1);
 $colour-card: #fff;
 $colour-Error-light: #ffe7ea;
+$colour-foreground-text--dark: #000000;
 
 $colour-Primary: #153a6e;
 $colour-Primary-dark: #213363;
